--- a/src/routes/test/index.mdx
+++ b/src/routes/test/index.mdx
@@ -16,7 +16,7 @@ import { Example01 } from "./examples";
 
 # Test MDX Issue
 
-This route tests if there is currently an issue where Qwik is rendering MDX. In Qwik UI, there is an issue when the user refreshes in preview build, and the autocomplete is broken inside of MDX.
+This route tests if there is currently an issue where Qwik is rendering JSX inside of MDX. In Qwik UI, there is an issue when the user refreshes in preview build, and the autocomplete is broken inside of MDX, this issue fixes when replacing MDX with TSX.
 
 <Example01>
   ```tsx
